--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -91,6 +91,8 @@ by Miguel Avila
 
 */
 
+
+
 #page-action-buttons {
   display: none;
 }
@@ -100,31 +102,26 @@ by Miguel Avila
 .tab-close-button {
   /* make it transparent */
   opacity: 0;
-  transition: 0.5s;
   border-radius: 50%;
 }
 
-.tab-close-button:hover {
-  /* make it transparent */
-  opacity: 100;
-  transition: 0.5s;
-}
+
+/* remove loading icon  */
+.tab-throbber{ display: none !important;}
 
 
-.tabbrowser-tab:not([pinned]) .tab-icon-image {
-  opacity: 0 !important;
-  transition: 0.5s !important;
-  width: 0px !important;
-}
-
-.tabbrowser-tab:not([pinned]):hover .tab-icon-image {
+/* make tab close button instantly show up  */
+.tabbrowser-tab:not([pinned]):hover .tab-close-button {
   opacity: 100 !important;
-  transition: 0.3s !important;
-  display: inline-block !important;
+}
+/* remove loading burst  */
+.tabbrowser-tab[image^="chrome:"] .tab-loading-burst {
+    display: none;
 }
 
-.tabbrowser-tab:not([pinned]):hover .tab-icon-image {
-  width: 16px !important;
+/* remove website icons in tabs  */
+.tabbrowser-tab .tab-icon-image {
+display: none !important;
 }
 
 .tab-icon-overlay {
