fix broken tab color after 119.0 update
firefox 119.0 changed a few things with userChrome, this update fixes this

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -47,6 +47,10 @@ by Miguel Avila
 */
 
 /* Tabs `s  */
+.tabbrowser-tab[selected="true"] .tab-background {
+  background: #201E21 none !important;
+}
+
 #tabbrowser-tabs:not([movingtab])
   > #tabbrowser-arrowscrollbox
   > .tabbrowser-tab
