--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -259,6 +259,18 @@ REMOVED ELEMENTS
 }
 */
 
+#blocked-permissions-container {
+  display: none !important;
+}
+
+.notification-anchor-icon {
+  display: none !important;
+}
+
+.blocked-permission-icon {
+  display: none !important;
+}
+
 .urlbarView-row[selected] .urlbarView-row-inner,
 .urlbarView-row:hover .urlbarView-row-inner { 
  background-color: #312d31 !important; 
@@ -360,7 +372,6 @@ If this looks weird, comment out the window buttons section.
 }
 
 /* identity-block.css | chrome://browser/skin/identity-block/identity-block.css */
-
 #identity-box[pageproxystate="valid"].verifiedDomain #identity-icon, #identity-box[pageproxystate="valid"].mixedActiveBlocked #identity-icon {
   /* list-style-image: url(chrome://global/skin/icons/security.svg); */
   list-style-image: url(./lock.svg) !important;
@@ -369,14 +380,12 @@ If this looks weird, comment out the window buttons section.
 }
 
 /* tabs.css | chrome://browser/skin/tabs.css */
-
 #tabs-newtab-button, #TabsToolbar #new-tab-button {
   /* list-style-image: url(chrome://global/skin/icons/plus.svg); */
   list-style-image: url(./plus.svg) !important;
   fill: white !important;
   filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(190deg) brightness(104%) contrast(102%);
 }
-
 
 #alltabs-button {
   /* list-style-image: url(chrome://global/skin/icons/arrow-down.svg); */
@@ -385,9 +394,8 @@ If this looks weird, comment out the window buttons section.
   filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(190deg) brightness(104%) contrast(102%);
 }
 
-
 #permissions-granted-icon {
-  list-style-image: url(./toggle-left.svg) !important;
+  list-style-image: url(./hexagon.svg) !important;
   fill: white !important;
   filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(190deg) brightness(104%) contrast(102%) !important;
 }
