Add border radius to the tab close button

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -166,7 +166,7 @@ REMOVED ELEMENTS
 .tab-close-button {
 /* make it transparent */
   opacity: 0;
-  border-radius: 50%;
+  border-radius: 5px !important;
 }
 
 /* remove loading icon  */
