New URL highlight color
-also updated README

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -259,6 +259,10 @@ REMOVED ELEMENTS
 }
 */
 
+#urlbar-input::selection{
+  background-color: #312D31 !important;
+}
+
 #blocked-permissions-container {
   display: none !important;
 }
