fix box shadow showing on urlbar when new tab is focused

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -304,6 +304,7 @@ REMOVED ELEMENTS
 .search-one-offs {
   background-color: #201e21 !important;
   border: none !important;
+  box-shadow: none !important;
 }
 
 .urlbarView-row:hover > .urlbarView-row-inner {
